# Qml_CustomControl

./: .gitignore  README.md
CustomControl/: ArcProgressBar.qml  ArcProgressBarCanvas.qml  BarTypeProgressBar.qml  CatConfig.qml  CircleProgressBar.qml  DragSizeWidget.qml  DragWidget.qml  Fps.qml  ImageFlicker.qml  ImageFlipable.qml  ImageMove.qml  ImageScale.qml  IpTextInput.qml  Marquee.qml  RotateCursor.qml  TemplateWidget.qml  TextOneByOneShow.qml
QmlLog/: .gitignore  CMakeLists.txt  Demo.qml  README.md  main.cpp  main.qml  qml.qrc
QmlLog/Log/: CMakeLists.txt  CatLog_Message.hpp  CatLog_Sington.cpp  CatLog_Sington.h
QmlLog/QmlCatLog/: CMakeLists.txt  QmlCatLog.h
QmlLog/x64/Debug/qmake/: qtvars_x64_Debug.props
QmlLog/x64/Release/qmake/: qtvars_x64_Release.props
QrenCode/: README.md
Test/: MarqueeTest.qml
Test/ArcProgressBarCanvasTest/: ArcProgressBarCanvasTest.qml  ArcProgressBarCanvasTest.qmlproject  README.md
Test/ArcProgressBarTest/: ArcProgressBarTest.qml  ArcProgressBarTest.qmlproject  README.md
Test/BarTypeProgressBarTest/: BarTypeProgressBarTest.qml  BarTypeProgressBarTest.qmlproject  README.md
Test/DragWidgetTest/: DragWidgetTest.qml  DragWidgetTest.qmlproject  README.md
Test/FpsTest/: FpsTest.qml  FpsTest.qmlproject  README.md
Test/ImageFlickerTest/: ImageFlickerTest.qml  ImageFlickerTest.qmlproject  README.md
Test/ImageFlipableTest/: ImageFlipableTest.qml  ImageFlipableTest.qmlproject  README.md
Test/ImageMoveTest/: ImageMoveTest.qml  ImageMoveTest.qmlproject  (+1 more)
demo/: Particlesdemo0.qml  Particlesdemo1.qml  TextOneByone.qml
(+66 files in other folders)
